# shill-bidding-prediction

./: .deployment_ip  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_monitoring.sh
.github/workflows/: ci-cd.yml
api/: Dockerfile  auction_stats.json  example_prediction_request.py  main.py  main_simple.py  requirements.txt
docs/: AWS_DEPLOYMENT_SUMMARY.md  DEPLOYMENT_GUIDE.md  README.md  README_MONITORING.md  aws-requirements.md
exploration/: eda.ipynb  feature_eng.ipynb  register_model.ipynb
monitoring/: generate_traffic.py  monitoring_evidently.py  prometheus.yml  test_monitoring.py
monitoring/grafana/dashboards/: model-monitoring.json
pipeline/: prefect_flow.py
scripts/: cleanup.sh  deploy.sh
src/: models.py  register_model_for_api.py
terraform/: CHANGES_SUMMARY.md  DEPLOYMENT_GUIDE.md  deploy.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf
terraform/modules/ec2/: main.tf  outputs.tf  variables.tf
terraform/modules/s3/: main.tf  outputs.tf  variables.tf
terraform/modules/security/: main.tf  outputs.tf  variables.tf
terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
terraform/scripts/: user-data.sh
tests/integration/: test_api_integration.py
tests/unit/: test_model.py
